<resources>
    <string name="app_name">Adelivery</string>
    <string name="title_activity_home">Home</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_slogan">Anytime, Anything, Anywhere</string>
    <string name="str_mobile_no">8965975632</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_enter_mobile_number">Please enter mobile number</string>
    <string name="str_my_detail">My Detail</string>
    <string name="str_my_order">My Order</string>
    <string name="str_nav_home">Home</string>
    <string name="str_setting">Setting</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_term_amp_condition"><![CDATA[Term & Condition]]></string>
    <string name="str_confirmation_detail">Confirmation</string>
    <string name="str_first_delivery_free_n_for_you"><![CDATA[ First Delivery Free<sup><small>T*C</small></sup> <br /> for you.]]></string>
    <string name="str_schedule_your_delivery">Schedule your delivery</string>
    <string name="str_next">Next</string>
    <string name="str_we_charge_rs_2_km_min_rs_15_for_single_delivery">We charge Rs. 2/km, min Rs.15 for single
        delivery
    </string>
    <string name="str_full_name">Full Name</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_email_id">Email Id</string>
    <string name="str_city">City</string>
    <string name="str_submit">Submit</string>
    <string name="str_full_name_label">Full Name :</string>
    <string name="str_mobile_number_label">Mobile Number :</string>
    <string name="str_email_id_label">Email Id :</string>
    <string name="str_city_label">City :</string>
    <string name="str_set_location">Set Location :</string>
    <string name="str_pick_up_location">Pick up location with zip code</string>
    <string name="str_pick_up">Pick up :</string>
    <string name="str_drop_location">Drop location with zip code</string>
    <string name="str_drop">Drop :</string>
    <string name="str_pick_up_location_label">Pick up location :</string>
    <string name="str_drop_location_label">Drop location :</string>
    <string name="str_mobile_number_alternate">Mobile Number(Alternate)</string>
    <string name="str_delivery_date">Delivery date</string>
    <string name="str_mode_of_payment_cod">Mode of Payment : COD</string>
    <string name="str_submit_detail">Submit Detail</string>
    <string name="str_detail_of_delivery">Detail of Delivery</string>
    <string name="str_resend_otp">Resend OTP</string>
    <string name="str_enter_otp">Enter OTP :</string>
    <string name="str_enter_otp_hint">Enter OTP</string>
    <string name="str_confirm">Confirm ?</string>
    <string name="str_my_order_label">My Order :</string>
    <string name="str_order_detail">Order Detail</string>
    <string name="str_excepted_delivered">Excepted Delivered :</string>
    <string name="str_amount_to_pay">Amount to pay:</string>
    <string name="str_2_x_distance_travel_x_2">2 X Distance travel X 2</string>
    <string name="str_order_delivered">Order Delivered</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_contact_us_will_have_mobile_number_and_email_address">Contact us will have mobile number and email
        address :
    </string>
    <string name="str_johnk_gmail_com">johnk@gmail.com</string>
    <string name="str_help">To see previous or current schedule delivery, user need to enter mobile number or email
        address the he will receive OTP and the able to track delivery\'s.
    </string>
    <string name="str_adelivery_gmail_com">adeliverys@gmail.com</string>
    <string name="str_term_and_condition_value">1. Privacy policy, means you are allowing us to keep record of personal
        data.\n\n 2.\t Delivery periods ginven at the time of ordering are approximate and may vary.\n\n 3.\t In case of
        late delivery, charges neither be voided not refunded by us.\n\n
        4.\t If we fail to contact you or attempt to deliver package but you aren\'t available at the time of scheduled
        periods, \n\t Then customer need to pay for re-schedule and prior scheduled delivery.\n\n
        5.\t Payment mode is COD, which can be vary as needed. \n\n 6.\t Charges applied are for two way distance
        calculated. \n\n 7.\t Adelivery reserves the right to block the customer\'s with suspicious activity on account.
        \n\n 8.\t  Delivery changes calculated as two-way distance with multiple of per km fairs. \n
        i.e. TWO-WAY DISTANCE TRAVELEDX 2 (Rs.2/km)
        \n\n 9. \t For offline orders please contact us directly through mail or by call.
        \n\n 10.\t  For shopping as required please upload list image, \n
        (Extra Charges will be applicable, up to 5% of total bill).
        \n\n 10.\t  First delivery free up to Rs.25, afterwards amount will be payable and night charges will be extra as applicable.
    </string>
    <string name="admin_9021580768">9021580768/ 8130904435</string>
    <string name="title_activity_map">Map</string>
    <string name="connection_failed">Google Places API connection failed with error code</string>
    <string name="internet_error">No Internet connection</string>
    <string name="str_error_please_enter_pick_address">Please enter pick location</string>
    <string name="str_error_please_enter_drop_address">Please enter drop location</string>

    <string name="imagepicker_multiselect_done">Done</string>
    <string name="imagepicker_multiselect_not_enough_singular">You have to select 1 more image</string>
    <string name="imagepicker_multiselect_not_enough_plural">You have to select %d more images</string>
    <string name="imagepicker_multiselect_enough_singular">You have selected 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">You have selected %d images</string>
    <string name="imagepicker_multiselect_overselect">You cannot select more than %d images</string>
    <string name="imagepicker_no_image_text_view">There are no image in your device.</string>
    <string name="product_image">Product Image</string>
</resources>
