<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MyDetailFragment">

    <TextView
            android:id="@+id/txtPickUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_pick_up"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/txtPickUpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/str_pick_up_location"
            app:layout_constraintStart_toEndOf="@id/txtPickUpLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"/>
    <TextView
            android:id="@+id/txtDropLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_drop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/txtPickUpAddress"/>
    <TextView
            android:id="@+id/txtDropAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/str_drop_location"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/txtDropLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtPickUpAddress"/>

    <TextView
            android:id="@+id/txtExceptedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_excepted_delivered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/txtDropAddress"/>
    <TextView
            android:id="@+id/txtDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/str_delivery_date"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/txtExceptedLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtDropAddress"/>


    <TextView
            android:id="@+id/txtModOfPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintTop_toBottomOf="@+id/txtExceptedLabel"
            android:text="@string/str_mode_of_payment_cod"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

    <TextView
            android:id="@+id/txtAmountToPayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_amount_to_pay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/txtModOfPayment"/>
    <TextView
            android:id="@+id/txtAmountToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/str_2_x_distance_travel_x_2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/txtAmountToPayLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtModOfPayment"/>

    <Button
            android:id="@+id/btnOrderDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.1"
            android:textSize="18sp"
            android:text="@string/str_order_delivered"
            android:textAllCaps="false"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"/>
    <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/str_cancel"
            android:padding="10dp"
            android:textAllCaps="false"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"/>
    <include layout="@layout/charges_layout"/>

</android.support.constraint.ConstraintLayout>
