<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MyDetailFragment">

    <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:hint="@string/str_full_name"/>
    <EditText
            android:id="@+id/edtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/str_mobile_number"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/edtFullName"/>

    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/str_email_id"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMobileNumber"/>

    <EditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/str_city"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"/>

    <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorAccent"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/str_next"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"/>
    <include layout="@layout/charges_layout"/>

</android.support.constraint.ConstraintLayout>
