<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ConfirmationFragment">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEnterOTP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/txtResendOTP"
            android:layout_marginEnd="20dp"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/tiEdtOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="4"
                android:inputType="numberPassword"
                android:hint="@string/str_enter_otp_hint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/txtResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_resend_otp"
            app:layout_constraintBottom_toBottomOf="@id/tilEnterOTP"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>


    <TextView
            android:id="@+id/txtModOfPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilEnterOTP"
            android:text="@string/str_mode_of_payment_cod"
            android:layout_margin="8dp"
            android:padding="8dp"/>

    <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorAccent"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/str_confirm"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"/>
    <include layout="@layout/charges_layout"/>

</android.support.constraint.ConstraintLayout>
